--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,4 @@
 spring.data.mongodb.uri=mongodb+srv://planets-api-user:LznAuUE17aCZJAVS@jzdb-fwulr.mongodb.net/test
+#spring.data.mongodb.password=LznAuUE17aCZJAVS
+#spring.data.mongodb.username=planets-api-user
 spring.data.mongodb.repositories.type=auto
